@@ -1,7 +1,9 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
-  GIRAPH-Fetching locality info in InputSplitPathOrganizer causes jobs to hang (apresta via ereisman)
+  GIRAPH-431: Support edge and vertex value input formats in GiraphRunner (apresta)
+
+  GIRAPH-477: Fetching locality info in InputSplitPathOrganizer causes jobs to hang (apresta via ereisman)
 
   GIRAPH-459: Group Vertex Mutations by Partition ID (claudio)
 
